--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pytrends>=4.9.0                # Google Trends
 transformers>=4.30.0           # NLP models (finbert for sentiment)
 torch>=2.0.0                   # PyTorch (required by transformers)
 
-# Optional: For enhanced features
-# numpy>=1.24.0
-# pandas>=2.0.0
+# Machine Learning (Week 4-5)
+numpy>=1.24.0                  # Numerical computing
+pandas>=2.0.0                  # Data manipulation
+scikit-learn>=1.3.0            # ML models (train/test split, preprocessing)
